<resources>

    <string name="app_name">KineApp</string>
    <string name="warning_no_conection">Se ha perdido la conexión a internet</string>
    <string name="empty_list">La lista está vacía</string>

    <string name="generic_error_message">Ups! Hubo un error, intente mas tarde</string>
    <string name="generic_accept_button">Aceptar</string>
    <string name="generic_wait_message">Espere por favor&#8230;</string>
    <string name="secret_question_title">Elija su pregunta secreta y respóndala:</string>
    <string name="secret_question_hint">La respuesta es&#8230;</string>
    <string name="patients_list_title">Mis Pacientes</string>
    <string name="profile_name_title">Nombre</string>
    <string name="profile_surname_title">Apellido</string>
    <string name="profile_license_title">Matrícula</string>
    <string name="profile_email_title">Email</string>
    <string name="profile_phone_title">Teléfono de contacto</string>
    <string name="profile_close_session">Cerrar sesión</string>
    <string name="mandatory_field">Campo obligatorio</string>
    <string name="rol_selection_title">Seleccione su rol</string>
    <string name="professional">Profesional</string>
    <string name="patient">Paciente</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="login_title">Login/Registro</string>
    <string name="sign_up_title">Vamos a pedirte unos datos para darte de alta</string>
    <string name="patient_sessions_title">Sesiones de %s</string>
    <string name="observations_title">Observaciones</string>
    <string name="photos_title">Fotos</string>
    <string name="caution_title">¡Atención!</string>
    <string name="exit_without_saving_msg">Está saliendo sin guardar los cambios</string>
    <string name="generic_cancel">Cancelar</string>
    <string name="camera_permission_denied">Sin los permisos de Cámara no podemos continuar</string>
    <string name="camera_ask_permission_title">Necesitamos permisos para utilizar la Cámara</string>
    <string name="camera_ask_permission_msg">Si no aprueba el permiso, la aplicación no puede funcionar correctamente</string>
    <string name="remove_warning_title">¡Atención!</string>
    <string name="remove_pic_warning_subtitle">¿Desea borrar esta foto?</string>
    <string name="empty_photos">Para agregar fotos presione el botón flotante de la esquina inferior derecha</string>
    <string name="profile_title">Perfil</string>
    <string name="public_videos_title">Mis Videos</string>
    <string name="remove_video_warning_subtitle">¿Desea borrar este video?\nSe quitará de todos los ejercicios que lo estén utilizando</string>
    <string name="public_video_view_title">Video Público</string>
    <string name="http_error_message">Parece que no puede realizar esta operación</string>
    <string name="videos_from_title">Videos para %s</string>
    <string name="google_sign_in_btn">Iniciar con Google</string>
    <string name="google_sign_in_explanation_one">Bienvenido a KineApp, la herramienta adecuada para los Kinesiólogos y sus pacientes.</string>
    <string name="google_sign_in_explanation_two">Para continuar debe iniciar sesión con una cuenta de Google.\n\nA continuación, accederá al sistema.</string>
    <string name="google_sign_in_explanation_three">Si es la primera vez que ingresa, le pediremos algunos datos sobre su identidad.\n\n¡Gracias!</string>
    <string name="exercises_title">Ejercicios</string>
    <string name="timeline_title">Timeline</string>
    <string name="take_video_title">Grabar video</string>
    <string name="profile_medic_title">Kinesiólogo Principal</string>
    <string name="not_medic_assigned">No tiene kinesiólogo asignado</string>
    <string name="medic_selector_title">Buscar kinesiólogo:</string>
    <string name="medic_selector_hint">Ingrese matrícula, nombre o apellido&#8230;</string>
    <string name="medic_selector_count">Resultados: %s</string>
    <string name="exercice_description_title">Descripción:</string>
    <string name="exercice_watch_video">Ver Video</string>
    <string name="exercice_add_video">Agregar Video</string>
    <string name="exercice_done">¡Hecho!</string>
    <string name="exercice_undone">Sin Hacer</string>
    <string name="exercice_remove">Eliminar</string>
    <string name="routine_empty">Hoy no tienes ejercicios que hacer\n¡a descansar!</string>
    <string name="routine_empty_add_new">No hay ejercicios asignados aún</string>
    <string name="create_session_title">Está a punto de crear una nueva sesión</string>
    <string name="create_session_msg">¿Desea continuar?</string>
    <string name="take_video_msg">Recuerde que la duración máxima del mismo es de 20
        segundos.
    </string>
    <string name="routines_title">Rutinas</string>
    <string name="timeline_speed_title">Velocidad:</string>
    <string name="choose_tag_title">Seleccione postura</string>
    <string name="picture_selector_height">Altura</string>
    <string name="picture_selector_width">Contextura</string>
    <string name="picture_selector_hide">Ocultar</string>
    <string name="new_exercise_title">Crear ejercicio</string>
    <string name="new_exercise_title_label">Tïtulo del ejercicio</string>
    <string name="new_exercise_description_label">Describa el ejercicio</string>
    <string name="new_exercise_day_label">Días de la semana:</string>
    <string name="newexercise_title_hint">Ingresar nombre&#8230;</string>
    <string name="newexercise_description_hint">De la manera mas sencilla&#8230;</string>
    <string name="new_exercise_warning_title">¡Atención!</string>
    <string name="new_exercise_warning_message">Debe seleccionar al menos un día</string>
    <string name="channel_name">default_channel</string>
    <string name="channel_description">Canal standard de Notificaciones</string>
    <string name="error_take_video">Error al grabar el video, intente nuevamente</string>
    <string name="error_comprees_video">Error al comprimir el video, intente nuevamente</string>
    <string name="video_extension">.mp4</string>
    <string name="generic_hint">Ingresar&#8230;</string>
    <string name="input_video_title">Ingrese título del video:</string>
    <string name="success_video_title">Video Disponible</string>
    <string name="success_video_msg">¡Perfecto! Ya podes utilizar el video para las rutinas de tus pacientes.</string>
    <string name="exercice_add_video_label">Agregar video</string>
    <string name="video_selector_title">Seleccione un video:</string>
    <string name="no_videos_available_title">No hay videos disponibles</string>
    <string name="no_videos_available_message">Grabe un video desde la sección Mis Videos y luego podrá visualizarlo
        aquí.
    </string>
    <string name="video_not_selected">Seleccionar video</string>
    <string name="request_permissions_title">Se necesitan permisos para esta acción</string>
    <string name="request_permissions_message">Si no otorga los permisos necesarios desde aquí, deberá hacerlo por los Ajustes de Aplicación
    </string>
    <string name="video_cancelled">Grabación cancelada</string>
    <string name="timeline_no_photos">No hay imágenes, seleccione otra postura</string>
    <string name="patient_list_empty_view">Aún no fue asignado a ningún paciente</string>
    <string name="patient_list_title">Mis Pacientes:</string>
    <string name="patient_list_read_only">Otros pacientes compartidos (sólo lectura):</string>
    <string name="profile_shared_medics_title">Kinesiólogos que pueden ver mi historial</string>
    <string name="delete_session_message">¿Está seguro que desea borrar la sesión actual?</string>
    <string name="my_sessions_title">Mis Sesiones</string>
    <string name="empty_photos_no_medic">No se han tomado fotos en esta sesión</string>
    <string name="empty_sessions_list">Aún no hay sesiones registradas</string>
    <string name="empty_videos_list">Pulse en el botón flotante de abajo para crear un video nuevo</string>

    <string-array name="pics_kind_array">
        <item>Frente</item>
        <item>Derecha</item>
        <item>Dorso</item>
        <item>Izquierda</item>
        <item>Otra</item>
    </string-array>

    <string-array name="days_array">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>
        <item>Domingo</item>
    </string-array>

</resources>
