<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/large_margin"
    app:cardElevation="3dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/large_radius">

    <LinearLayout
        android:padding="@dimen/large_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/exercice_description_title"
            android:textColor="@color/black_title"
            style="@style/TextViewStyleRegular" />

        <TextView
            android:id="@+id/tvDescription"
            android:textColor="@color/black_title"
            tools:text="Realizar 3 series de 5 repeticiones extendiendo lo mas posible los brazos"
            style="@style/TextViewStyleLight" />

        <FrameLayout
            android:layout_marginTop="@dimen/large_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/llWatchVideo"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_play_circle"
                    android:tint="@color/colorPrimary"
                    android:layout_width="60dp"
                    android:layout_height="60dp"/>

                <TextView
                    android:text="@string/exercice_watch_video"
                    android:textColor="@color/colorPrimary"
                    style="@style/TextViewStyleBold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llRemove"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_delete"
                    android:tint="@color/colorAccent"
                    android:layout_width="60dp"
                    android:layout_height="60dp"/>

                <TextView
                    android:text="@string/exercice_remove"
                    android:textColor="@color/colorAccent"
                    style="@style/TextViewStyleBold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDone"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_undone"
                    android:tint="@color/colorAccent"
                    android:layout_width="60dp"
                    android:layout_height="60dp"/>

                <TextView
                    android:text="@string/exercice_undone"
                    android:textColor="@color/colorAccent"
                    style="@style/TextViewStyleBold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAddVideo"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_upload"
                    android:tint="@color/colorPrimary"
                    android:layout_width="60dp"
                    android:layout_height="60dp"/>

                <TextView
                    android:text="@string/exercice_add_video"
                    android:textColor="@color/colorPrimary"
                    style="@style/TextViewStyleBold" />

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>